Upgrade Quarkus Java 21 foundation